hell yea dolla sign :nerdball:

--- a/templates/products.html
+++ b/templates/products.html
@@ -29,7 +29,7 @@
                                 -
                             </button>
                         </div>
-                        <small class="text-body-secondary price">₹ 39.99</small>
+                        <small class="text-body-secondary price">$ 39.99</small>
                     </div>
                 </div>
             </div>
@@ -53,7 +53,7 @@
                                 -
                             </button>
                         </div>
-                        <small class="text-body-secondary price">₹ 14.99</small>
+                        <small class="text-body-secondary price">$ 14.99</small>
                     </div>
                 </div>
             </div>
@@ -77,7 +77,7 @@
                                 -
                             </button>
                         </div>
-                        <small class="text-body-secondary price">₹ 1.49</small>
+                        <small class="text-body-secondary price">$ 1.49</small>
                     </div>
                 </div>
             </div>
@@ -102,7 +102,7 @@
                                 -
                             </button>
                         </div>
-                        <small class="text-body-secondary price">₹ 2.49</small>
+                        <small class="text-body-secondary price">$ 2.49</small>
                     </div>
                 </div>
             </div>
@@ -126,7 +126,7 @@
                                 -
                             </button>
                         </div>
-                        <small class="text-body-secondary price">₹ 2.99</small>
+                        <small class="text-body-secondary price">$ 2.99</small>
                     </div>
                 </div>
             </div>
@@ -150,7 +150,7 @@
                                 -
                             </button>
                         </div>
-                        <small class="text-body-secondary price">₹ 24.99</small>
+                        <small class="text-body-secondary price">$ 24.99</small>
                     </div>
                 </div>
             </div>
@@ -175,7 +175,7 @@
                                 -
                             </button>
                         </div>
-                        <small class="text-body-secondary price">₹ 79.99</small>
+                        <small class="text-body-secondary price">$ 79.99</small>
                     </div>
                 </div>
             </div>
@@ -199,7 +199,7 @@
                                 -
                             </button>
                         </div>
-                        <small class="text-body-secondary price">₹ 129.99</small>
+                        <small class="text-body-secondary price">$ 129.99</small>
                     </div>
                 </div>
             </div>
@@ -223,7 +223,7 @@
                                 -
                             </button>
                         </div>
-                        <small class="text-body-secondary price">₹ 2.99</small>
+                        <small class="text-body-secondary price">$ 2.99</small>
                     </div>
                 </div>
             </div>
