--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -230,7 +230,7 @@
                             </div>
                         </div>
                         <hr class="my-4" />
-                        <button class="w-100 btn btn-primary btn-lg" type="submit" onClick="sendAddress()">Continue to
+                        <button class="w-100 btn btn-primary btn-lg" type="button" onClick=sendAddress()>Continue to
                             checkout</button>
                     </form>
                 </div>
@@ -327,6 +327,7 @@
                 body: JSON.stringify({ address }),
             })
                 .then((response) => {
+                    console.log(response);
                     if (response.ok) {
                         alert("Moye Moye! Your order has been placed successfully");
                         
