--- a/templates/base.html
+++ b/templates/base.html
@@ -8,8 +8,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-        {% block styles %}
-        {% endblock styles %}
+    {% block styles %}
+    {% endblock styles %}
 </head>
 
 <body>
@@ -31,10 +31,9 @@
                         <a class="nav-link" href="/products">Products</a>
                     </li>
                 </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-outline-success" type="submit">Search</button>
-                </form>
+                <button class="btn btn-outline-primary" onclick="redirectToProfile()">
+                    <i class="bi bi-person"></i> Profile
+                </button>
             </div>
         </div>
     </nav>
@@ -56,6 +55,12 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
+
+    <script>
+    function redirectToProfile() {
+        window.location.href = "/profile";
+    }
+    </script>
 </body>
 
 </html>
