Complete Admin Page and Add Transactions

--- a/templates/login.html
+++ b/templates/login.html
@@ -9,9 +9,10 @@
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         html,
-        container{
+        container {
             margin-top: 10%;
         }
+
         body {
             height: 100%;
         }
@@ -115,6 +116,7 @@
         .bd-mode-toggle .dropdown-menu .active .bi {
             display: block !important;
         }
+
         .form-group {
             margin-bottom: 1rem;
         }
@@ -149,6 +151,10 @@
                         {% endif %}
                     </div>
                 </div>
+                <!-- Button for Signup -->
+                <div class="text-center mt-3">
+                    <a href="/signup" class="btn btn-link">Haven't registered yet? Click here to sign up</a>
+                </div>
             </div>
         </div>
     </div>
@@ -156,7 +162,8 @@
 
     <!-- Bootstrap JS Bundle (Popper included) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-k2M4sGj5EMXsRS1vQNCoScm1E3Z+L98/k6kz6+tx/C0yUYk7QjRGJ3cuZ+fd4OJj" crossorigin="anonymous"></script>
+        integrity="sha384-k2M4sGj5EMXsRS1vQNCoScm1E3Z+L98/k6kz6+tx/C0yUYk7QjRGJ3cuZ+fd4OJj"
+        crossorigin="anonymous"></script>
 </body>
 
 </html>
